force-app/main/default/objects/Package__c/fields/Developer_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_Org_ID__c</fullName>
    <label>Developer Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>