force-app/main/default/objects/Package__c/fields/Last_License_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Last_License_Refresh__c</fullName>
    <label>Last License Refresh</label>
    <type>Date</type>
</CustomField>