force-app/main/default/objects/Package__c/fields/Package_ID__c.field-meta.xml
<CustomField>
    <fullName>Package_ID__c</fullName>
    <label>Package ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>