force-app/main/default/objects/Package__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Package_ID__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Developer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>